--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.19.4",
     "hardhat-deploy": "^0.12.4"
@@ -19,9 +20,9 @@
     "chai": "^4.2.0",
     "dotenv": "^16.4.5",
     "ethereum-waffle": "^4.0.10",
+    "fs": "^0.0.1-security",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.1",
-    "fs": "^0.0.1-security",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
