--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@nomicfoundation/hardhat-ignition": "^0.15.8",
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.8",
     "hardhat": "^2.19.4",
     "hardhat-deploy": "^0.12.4"
   },
